# pytorch-stuff

./: .gitignore  README.md  pyproject.toml
SentenceTransformers/: SBERT_finetuning.ipynb
nbs/: pytorch_tutorial_0.ipynb  pytorch_tutorial_1.ipynb  pytorch_tutorial_2.ipynb  pytorch_tutorial_3.ipynb  pytorch_tutorial_4.ipynb  pytorch_tutorial_6.ipynb
nbs/models/: 01_pytorch_workflow_model_1.pth
setfit/: SetFit.ipynb  dataset.csv
