[tool.poetry]
name = "pytorchstuff"
version = "0.1.0"
description = ""
authors = ["L33T-Snack3r <daniel_lim_professional@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
